# rtun

./: Cargo.toml  build.rs  gfw.txt
.github/workflows/: build.yml  release_linux.yml  release_mac.yml
crates/fake_dns/: Cargo.toml
crates/fake_dns/src/: cidr_cache.rs  client_cache.rs  lib.rs  options.rs  processor.rs  server.rs  upstream.rs
crates/tun/: Cargo.toml
crates/tun/src/: cancelable.rs  cmd.rs  dns_proxy.rs  fakedns.rs  lib.rs  option.rs  power.rs  tcp.rs  tcp_tun.rs  udp.rs  virtual_device.rs
crates/tun/src/net/: copy.rs  mod.rs
crates/tun/src/net/sys/: linux.rs  macos.rs  mod.rs  unix.rs
crates/tun/src/smux/: cipher.rs  fec.rs  mod.rs  session.rs  stream.rs
crates/tun/src/socks5/: mod.rs  tcp_client.rs
crates/tun/src/stack/: ip.rs  mod.rs  tcp.rs  udp.rs  virt_device.rs
src/: main.rs
