[workspace]
member = ["crates/fake_dns"]

[package]
name = "rtun"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }


[workspace.package]
authors = ["Join.G"]
homepage = "https://github.com/Joinhack/rtun"
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
log = "0.4.27"
futures-core = "0.3.31"
hickory-resolver = "0.25.2"
tokio = { version = "1.45.1", features = [
    "net",
    "time",
    "macros",
    "sync",
    "rt-multi-thread",
] }
ipnet = "2.11.0"
iprange = "0.6.7"
fake_dns = { path = "crates/fake_dns" }
byteorder = "1.5.0"
bytes = "1.10.1"
libc = "0.2.174"
futures = "0.3.31"

[dependencies]
fake_dns = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
