[workspace]
members = ["crates/tun"]

[package]
name = "rtun"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }


[workspace.package]
authors = ["Join.G"]
homepage = "https://github.com/Joinhack/rtun"
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
log = "0.4.27"
futures-core = "0.3.31"
netstack-lwip = { git = "https://github.com/Joinhack/netstack-lwip", rev = "b7d9b0a" }
tokio = { version = "1.45.1", features = [
    "net",
    "time",
    "macros",
    "signal",
    "sync",
    "rt-multi-thread",
] }
ipnet = "2.11.0"
iprange = "0.6.7"
fake_dns = { path = "crates/fake_dns" }
librtun = { path = "crates/tun" }
byteorder = "1.5.0"
bytes = "1.10.1"
libc = "0.2.174"
futures = "0.3.31"
tun = "0.8.2"
spin = "0.10.0"
oneshot = "0.1.11"
rand = "0.9.1"
byte_string = "1.0.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
anyhow = "1.0.98"
socket2 = "0.5.10"
trust-dns-proto = "0.23.2"
if-watch = "3.2.1"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
librtun.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
