[package]
name = "fake_dns"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
hickory-resolver = { workspace = true }
iprange = { workspace = true }
ipnet = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }
futures = { workspace = true }
