[package]
name = "librtun"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }

[features]
defaults = []

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
oneshot = { workspace = true }
rand = { workspace = true }
byte_string = { workspace = true }
ipnet = { workspace = true }
libc = { workspace = true }
tun = { workspace = true, features = ["async"] }
netstack-lwip = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
trust-dns-proto = { workspace = true }
tcmalloc = { workspace = true, optional = true }
if-watch = { workspace = true, features = ["tokio"] }
